[package]
name = "raft-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raft-key-value-rocks"
path = "src/bin/main.rs"

[dependencies]
openraft = { version = "0.10.0", features=["serde", "type-alias"] }

rocksdb = "0.22.0"
rand = "0.8"
byteorder = "1.4.3"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.22", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { version = "0.1.40" }

clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["json"] }
tide = { version = "0.16" }
# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-alpha.1/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.10.0", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

[patch.crates-io]
openraft = { git = 'https://github.com/databendlabs/openraft.git' }

[dev-dependencies]
tempfile = { version = "3.4.0" }

[features]
bt = ["openraft/bt"]